--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp _redirects dist/_redirects",
     "preview": "vite preview",
     "add-component": "hygen component new",
     "prepare": "husky install"
@@ -33,12 +33,12 @@
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.0",
     "hygen": "^6.2.7",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "unocss": "^0.44.5",
-    "vite": "^3.0.0",
-    "husky": "^8.0.0"
+    "vite": "^3.0.0"
   }
 }
