--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "jsxFragmentFactory": "Fragment",
     "paths": {
       "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"]
-    },
+      "react-dom": ["./node_modules/preact/compat/"], 
+    }
   },
   "include": ["src", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
