--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.4",
     "nprogress": "^0.2.0",
     "preact": "^10.9.0",
+    "preact-shared-state-hook": "^0.2.4",
     "react-router-dom": "6",
     "remixicon": "^2.5.0"
   },
