--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dayjs": "^1.11.4",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
-    "preact": "^10.9.0",
+    "preact": "10.10.0",
     "preact-shared-state-hook": "^0.2.4",
     "react-router-dom": "6",
     "react-slidedown": "^2.4.7",
