--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@preact/compat": "^17.1.1",
     "dayjs": "^1.11.4",
     "nprogress": "^0.2.0",
-    "path-browserify": "^1.0.1",
     "preact": "10.10.0",
     "preact-shared-state-hook": "^0.2.4",
     "react-router-dom": "6",
     "react-slidedown": "^2.4.7",
-    "remixicon": "^2.5.0"
+    "remixicon": "^2.5.0",
+    "url-join": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
