--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,5 @@
       "react-dom": ["./node_modules/preact/compat/"], 
     }
   },
-  "include": ["src", "vite.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "vite.config.ts"]
 }
