--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # supplied by Netlify in production builds
-VITE_REPOSITORY_URL=https://github.com/alexander-ding/ading.dev
+VITE_REPOSITORY_URL=https://github.com/alexander-ding/alexding.me
 VITE_COMMIT_REF=main
