--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "preact-shared-state-hook": "^0.2.4",
     "react-router-dom": "6",
     "react-slidedown": "^2.4.7",
-    "remixicon": "^2.5.0",
     "url-join": "^5.0.0"
   },
   "lint-staged": {
@@ -30,11 +29,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@iconify-json/ri": "^1.1.3",
     "@preact/preset-vite": "^2.3.0",
     "@svgr/core": "^6.3.0",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "@unocss/preset-icons": "^0.45.4",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.0",
