--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && VITE_COMMIT_REF=$COMMIT_REF VITE_REPOSITORY_URL=$REPOSITORY_URL vite build && cp _redirects dist/_redirects",
     "build-dev": "tsc && npx netlify-cli build",
+    "lint": "eslint . --fix",
     "preview": "vite preview",
     "add-component": "hygen component new",
     "prepare": "husky install"
@@ -23,7 +24,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
       "eslint --fix"
     ]
   },
@@ -37,7 +37,11 @@
     "@typescript-eslint/parser": "^5.30.7",
     "@unocss/preset-icons": "^0.45.4",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
     "hygen": "^6.2.7",
     "lint-staged": "^13.0.3",
