feat: add build time

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # supplied by Netlify in production builds
 VITE_REPOSITORY_URL=https://github.com/alexander-ding/alexding.me
 VITE_COMMIT_REF=main
+VITE_BUILD_TIME=
