--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && VITE_COMMIT_REF=$COMMIT_REF VITE_REPOSITORY_URL=$REPOSITORY_URL vite build && cp _redirects dist/_redirects",
+    "build": "tsc && VITE_COMMIT_REF=$COMMIT_REF VITE_BUILD_TIME=$(date +'%b %d, %Y') VITE_REPOSITORY_URL=$REPOSITORY_URL vite build && cp _redirects dist/_redirects",
     "build-dev": "tsc && npx netlify-cli build",
     "lint": "eslint . --fix",
     "preview": "vite preview",
