--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@preact/compat": "^17.1.1",
-    "dayjs": "^1.11.4",
+    "@preact/compat": "^17.1.2",
+    "dayjs": "^1.11.9",
     "nprogress": "^0.2.0",
     "preact": "10.10.0",
-    "preact-shared-state-hook": "^0.2.4",
-    "react-router-dom": "6",
+    "preact-shared-state-hook": "^0.2.5",
+    "react-router-dom": "^6.15.0",
     "react-slidedown": "^2.4.7",
     "url-join": "^5.0.0"
   },
@@ -28,26 +28,26 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@iconify-json/ri": "^1.1.3",
-    "@preact/preset-vite": "^2.3.0",
-    "@svgr/core": "^6.3.0",
+    "@babel/core": "^7.22.10",
+    "@iconify-json/ri": "^1.1.12",
+    "@preact/preset-vite": "^2.5.0",
+    "@svgr/core": "^6.5.1",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "@unocss/preset-icons": "^0.45.4",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@unocss/preset-icons": "^0.45.30",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.0",
-    "hygen": "^6.2.7",
-    "lint-staged": "^13.0.3",
+    "husky": "^8.0.3",
+    "hygen": "^6.2.11",
+    "lint-staged": "^13.3.0",
     "prettier": "2.7.1",
-    "typescript": "^4.6.4",
-    "unocss": "^0.44.5",
-    "vite": "^3.0.0"
+    "typescript": "^4.9.5",
+    "unocss": "^0.44.7",
+    "vite": "^3.2.7"
   }
 }
