--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build.environment]
-  NPM_FLAGS = "--version"
   NODE_VERSION = "16"
 
 [build]
+  command = "pnpm build"
   publish = "dist"
-  command = "npx pnpm i && npx pnpm run build"
 
 [[redirects]]
   from = "/*"
