--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@6.3.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && VITE_COMMIT_REF=$COMMIT_REF VITE_BUILD_TIME=$(date +'%b %d, %Y') VITE_REPOSITORY_URL=$REPOSITORY_URL vite build && cp _redirects dist/_redirects",
