--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
   NODE_VERSION = "16"
 
 [build]
-  command = "pnpm build"
   publish = "dist"
+  command = "pnpm run build"
 
 [[redirects]]
   from = "/*"
