fix: alias react to preact

--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "react-slidedown": "^2.4.7",
     "url-join": "^5.0.0"
   },
+  "aliasify": {
+    "aliases": {
+      "react": "preact-compat",
+      "react-dom": "preact-compat"
+    }
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix"
@@ -37,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@unocss/preset-icons": "^0.45.30",
+    "aliasify": "^2.1.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
